src/components/layout.module.scss
// this autoprefixer config was being declared in src/styles/main.scss, but has now been moved to layout.module.scss because the Sass partials are now included via gatsby-config.js. main.scss is no longer used.

/* autoprefixer grid: autoplace */

html {
  font-size: 62.5%;
}

body {
  font-family: $fontPrimary;
  font-size: $textBaseSize;
  font-weight: 400;
  line-height: 1.8;
  color: $textColour;
  padding-top: calc(
    80px + 2rem
  ); // (height of nav + 1rem) - to prevent content from being hidden under fixed nav
}

@media (min-width: 600px) {
  html {
    font-size: 66%;
    line-height: 1.4;
  }
}

@media (min-width: 900px) {
  html {
    font-size: 70%;
    // line-height: 1.4;
  }
}

@media (min-width: 1200px) {
  html {
    font-size: 75%;
    // line-height: 1.4;
  }
}

main {
  display: block;
}

small {
  font-size: 80%;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
}

a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

// to make sticky footer in combination with .content
.container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

// to make sticky footer in combination with .container
.content {
  flex-grow: 1;
  margin: 0 auto;
  max-width: 750px;
  padding: 3rem;
}

/**
 * Typography
 */

h1 {
  font-size: $textXL;
  font-weight: bold;
  line-height: 1.4;
  margin-bottom: 0.8em;
}

p {
  margin-bottom: 0.6em;
}

/**
 * Buttons - TEMP
 */

.cta {
  display: inline-block;
  margin: 1rem 0;
  padding: 1rem 1.75rem;
  border: 1px solid $colourSecondary;
  border-radius: 20px;
  cursor: pointer;
  transition: background 0.2s ease-out;

  &:hover {
    background-color: $colourPrimary;
  }
}

/**
 * Links - TEMP
 */

.content p a {
  box-shadow: inset 0 -2px 0 0 $colourPrimary;
  border-bottom: 4px solid $colourPrimary;
  transition: background 0.2s ease-out;

  &:hover {
    background-color: $colourPrimary;
  }
}

/**
 * Other - TEMP
 */

